--- a/style.css
+++ b/style.css
@@ -5,9 +5,36 @@ body {
     font-size: 16px;
 }
 
+.instructions {
+  color: #808080;
+}
+
 .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 50px;
+    align-content: center;
+    justify-items: center;
+}
+
+.email-input {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
+
+input[type=text], select {
+    background: #f3f3f5;
+    border: none;
+    border-radius: 4px;
+    color: #4c4a57;
+    display: block;
+    font-family: Lato,sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0;
+    outline: 0;
+    padding: 0.625em;
+    transition: .15s ease-in-out;
+    transition-property: background-color;
+    width: 16rem;
+  }
