--- a/style.css
+++ b/style.css
@@ -5,16 +5,19 @@ body {
     font-size: 16px;
 }
 
+.header {
+    text-align: center;
+}
+
 .instructions {
   color: #808080;
+  text-align: center;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr;
     padding: 50px;
-    align-content: center;
-    justify-items: center;
+    width: 40%;
+    margin: 0 auto;
 }
 
 .email-input {
@@ -22,7 +25,7 @@ body {
     flex-direction: column;
 }
 
-input[type=text], select {
+input[type=email], select {
     background: #f3f3f5;
     border: none;
     border-radius: 4px;
@@ -36,5 +39,15 @@ input[type=text], select {
     padding: 0.625em;
     transition: .15s ease-in-out;
     transition-property: background-color;
-    width: 16rem;
+  }
+
+  input[type=email].error {
+      border: 1px solid #ff0000;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    margin-top: 20px;
   }
