--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 .instructions {
   color: #808080;
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 .container {
@@ -39,6 +40,8 @@ input[type=email], select {
     padding: 0.625em;
     transition: .15s ease-in-out;
     transition-property: background-color;
+    width: 100%;
+    margin-bottom: 2rem;
   }
 
   input[type=email].error {
@@ -50,4 +53,38 @@ input[type=email], select {
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin-top: 20px;
+  }
+
+  .button {
+    background: linear-gradient(110deg,#f0f -44%,#1e0a78 157%);
+    border: none;
+    color: #fff;
+    margin-left: 0;
+    -webkit-appearance: button;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Lato,sans-serif;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1;
+    margin: 6px;
+    padding: 0.75em 1.25em;
+    text-align: center;
+    transition: .15s ease-in-out;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+    margin-top: 3rem;
+  }
+
+  .button:hover {
+    box-shadow: 0 1px 4px rgb(27 26 33 / 25%);
+    filter: brightness(1.1);
+    transform: translateY(-1px);
+  }
+  .submit-button {
+      text-align: center;
   }
