--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ body {
     margin: 0 auto;
 }
 
+.container2 {
+  padding: 50px;
+  width: 50%;
+  margin: 0 auto;
+}
+
 .email-input {
     display: flex;
     flex-direction: column;
